--- a/tables.html
+++ b/tables.html
@@ -9,18 +9,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <style>
         table{
-            width: 50%; /*can also use pixels*/
+            width: 70%; /*can also use pixels*/
             font-family: 'Robot', san-serif;
             border-collapse: collapse;
             margin: auto; /*This centers the table horizntally*/
-            box-shadow: 3px 6px 7px 4px rgba(16, 51, 4, 0.75);
+            border-top-right-radius: 36px;
+            border-top-left-radius: 16px;
+            box-shadow: 1px 1px 1px 1px rgba(219, 216, 217, 0.75);
         }
     
         thead{
             background-color: darkgreen;
             color: aliceblue;
             font-weight: bold;
-            font-size: 1.8rem;
+            font-size: 1.2rem;
             border-radius: 16px;
             /*rem--root element*/ 
         }
